# PLA-18

./: .gitignore  CMakeLists.txt  Makefile  README.md  error.cxx  global.h  init.cxx  lexan.cxx  lexmain.cxx  parsemain.cxx  parser.cxx  symbol.cxx
src/: init.cxx  lexan.cxx  lexmain.cxx  parsemain.cxx  parser.cxx
tests/: lexan.tst  pla_fehler.tst  pla_korrekt.tst
